k8s/user-java/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: userjava-ingress
  namespace: api
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/user-java
            pathType: Prefix
            backend:
              service:
                name: userjava-service
                port:
                  number: 80
          - path: /api/docs/user-java
            pathType: Prefix
            backend:
              service:
                name: userjava-service
                port:
                  number: 80
