k8s/user-java/user-java-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: userjava-ingress
  namespace: api
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/user-java/healthcheck
            pathType: Prefix
            backend:
              service:
                name: userjava-service
                port:
                  number: 80
          - path: /api/docs/user-java
            pathType: Prefix
            backend:
              service:
                name: userjava-service
                port:
                  number: 80
          - path: /api/user-java/{id}
            pathType: Prefix
            backend:
              service:
                name: userjava-service
                port:
                  number: 80
          - path: /api/documentation/user-java
            pathType: Prefix
            backend:
              service:
                name: userjava-service
                port:
                  number: 80
          - path: /api/swagger-resources
            pathType: Prefix
            backend:
              service:
                name: userjava-service
                port:
                  number: 80
          - path: /api/api-docs
            pathType: Prefix
            backend:
              service:
                name: userjava-service
                port:
                  number: 80
